Fixed contact spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,8 +4,8 @@
 	color: #816;
 	padding-left: 20px;
 	/* border-bottom: 5px; */
-	/* margin-top: 50px; */
-	/* margin: 5px 20px 50px 30px; */
+	margin-top: 100px;
+	margin-bottom: 5px;
 	margin-left: auto;
 	margin-right: auto;
 	width: 80%;
@@ -92,7 +92,7 @@
 	cursor: pointer;
 	position:relative;
 	top: -553;
-	left: 613px;
+	left: 614px;
 }
 
 #contact-image2{
